Login/Register ve Navbar Form&Event

--- a/angular.json
+++ b/angular.json
@@ -30,10 +30,20 @@
               "src/assets"
             ],
             "styles": [
+
+              "node_modules/ngx-toastr/toastr.css",
+              "src/assets/css/noscript.css",
+              "src/assets/css/main.css",
               "src/styles.scss",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/mdb-ui-kit/css/mdb.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/mdb-angular-ui-kit/assets/scss/mdb.scss"
+              
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -91,9 +101,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "node_modules/mdb-ui-kit/css/mdb.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           }
         }
       }
