--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@popperjs/core": "^2.11.8",
     "angular-animations": "^0.11.0",
+    "angular-bootstrap-md": "^4.3.2",
     "bootstrap": "^5.3.3",
     "jquery": "~3.7.0",
     "mdb-angular-ui-kit": "^6.0.0",
